--- a/Practice QS1.html
+++ b/Practice QS1.html
@@ -4,11 +4,14 @@
     <link rel="stylesheet" href="Practice QS1.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice qs 1</title>
+    <title>Practice Qs -1</title>
 </head>
 <body>
-    <h2>Hi there!</h2>
-    <p>My name is Tom & I am there to help you</p>
-    <button>Need Help</button>
+    <div id="MyId">
+        <h3>Lorem</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, debitis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, ad.</p>
+        
+    </div>
 </body>
 </html>
