--- a/Practice QS2.html
+++ b/Practice QS2.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="PracticeQS2.css">
+    <link rel="stylesheet" href="Practice QS2.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Practice QS-2</title>
 </head>
 <body>
-    <h1>Apna <br>Collage</h1>
+    <h1>Facebook</h1>
+    <button class="userbtn">Login</button>
+    <button class="userbtn">Resister</button>
+    <hr>
+    <label for="search">Search</label>
+    <input type="text" placeholder="Search your Friends" id="search">
+    <button id="searchbtn">Search</button>
 </body>
 </html>
