--- a/Practice QS1.html
+++ b/Practice QS1.html
@@ -4,14 +4,13 @@
     <link rel="stylesheet" href="Practice QS1.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice Qs -1</title>
+    <title>Practice QS 1</title>
 </head>
 <body>
-    <div id="MyId">
-        <h3>Lorem</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, debitis.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, ad.</p>
-        
+    <div id="outer">
+        <div class="inner" id="red"></div>
+        <div class="inner" id="green"></div>
+        <div class="inner" id="yellow"></div>
     </div>
 </body>
 </html>
