--- a/Index.html
+++ b/Index.html
@@ -4,17 +4,13 @@
     <link rel="stylesheet" href="Index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index Pge</title>
+    <title>Index page</title>
 </head>
 <body>
-    <h1>Random Heading </h1>
-    <div>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque, fuga. Recusandae minus libero sint eveniet perferendis in blanditiis natus exercitationem modi velit, sequi totam, at cumque quam accusantium! Incidunt ut aut adipisci, illo fugiat aspernatur iure ullam necessitatibus rerum, fuga porro commodi. Esse nam dolorem vel quos facere nostrum est?
-    </div>
-    <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa consequatur doloribus deserunt fugiat id omnis, ducimus dicta maxime alias qui voluptatibus eos nobis at quasi. Obcaecati voluptatem fugit itaque amet expedita deserunt ullam magni ad hic asperiores similique incidunt possimus illum repellat, officia omnis aliquam laboriosam nostrum quas magnam neque?
-    </div>
-    <button>Click me</button>
-
+    <h1>Z-Index</h1>
+     <div class="box one">1</div>
+    <div class="box two">2</div>
+    <div class="box three">3</div>
+ 
 </body>
 </html>
